add nav responsive

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,5 @@
 {
-    "header_banner": "Home",
-    "header_welcome": "Welcome",
+    "header_banner": "Welcome",
     "header_about": "About",
     "header_skills": "Skills",
     "header_contact": "Contact me",
