--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,7 +1,6 @@
 {
 
-    "header_banner": "Inicio",
-    "header_welcome": "Bienvenido",
+    "header_banner": "Bienvenido",
     "header_about": "Sobre mi",
     "header_skills": "Habilidades",
     "header_contact": "Contacto",
