--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -18,7 +18,7 @@
     "skills_tools": "Herramientas",
 
     "project_title": "Proyectos",
-    "project_d1": "descripcion",
+    "project_d1": "Info Dólar es una landing page diseñada para ofrecer información actualizada sobre los precios de los distintos tipos de cambio en Argentina, incluyendo el dólar oficial, blue, MEP, y más. Una herramienta sencilla y útil para quienes necesitan conocer el valor del dólar en tiempo real.",
     "project_d2": "descripcion",
     "project_d3": "descripcion",
 
