--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,7 +17,7 @@
     "skills_tools": "Tools",
 
     "project_title": "Projects",
-    "project_d1": "description",
+    "project_d1": "Info Dólar is a landing page designed to provide up-to-date information on the prices of various exchange rates in Argentina, including the official dollar, blue dollar, MEP, and more. A simple and useful tool for those who need real-time dollar value updates.",
     "project_d2": "description",
     "project_d3": "description",
 
