--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -18,7 +18,8 @@
 
     "project_title": "Projects",
     "project_d1": "Info Dólar is a landing page designed to provide up-to-date information on the prices of various exchange rates in Argentina, including the official dollar, blue dollar, MEP, and more. A simple and useful tool for those who need real-time dollar value updates.",
-    "project_d2": "description",
+    "project_d2": "
+Mi Viandita is a project developed in the Web 1 course, focused solely on frontend. It applies knowledge of HTML, CSS, and JavaScript to create a practical and interactive solution.",
     "project_d3": "description",
 
     "linkedin": "Linkedin Profile",
