--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -19,7 +19,7 @@
 
     "project_title": "Proyectos",
     "project_d1": "Info Dólar es una landing page diseñada para ofrecer información actualizada sobre los precios de los distintos tipos de cambio en Argentina, incluyendo el dólar oficial, blue, MEP, y más. Una herramienta sencilla y útil para quienes necesitan conocer el valor del dólar en tiempo real.",
-    "project_d2": "descripcion",
+    "project_d2": "Mi Viandita es un proyecto desarrollado en la cátedra de Web 1, enfocado únicamente en frontend. En él se aplicaron conocimientos de HTML, CSS y JavaScript para crear una solución práctica e interactiva.",
     "project_d3": "descripcion",
 
     "linkedin": "Perfil de Linkedin",
